// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio.Group renders radio in group 1`] = `
<div>
  <div
    class="MuiFormGroup-root"
    role="radiogroup"
  >
    <label
      class="MuiFormControlLabel-root FormControlLabel-root Radio-root"
    >
      <span
        class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiRadio-root Radio-root"
      >
        <span
          class="MuiIconButton-label"
        >
          <div
            class="Radio-uncheckedIcon"
          />
          <input
            class="MuiPrivateSwitchBase-input"
            type="radio"
            value="VALUE+1"
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      >
        LABEL+1
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root FormControlLabel-root Radio-root"
    >
      <span
        class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiRadio-root Radio-root"
      >
        <span
          class="MuiIconButton-label"
        >
          <div
            class="Radio-uncheckedIcon"
          />
          <input
            class="MuiPrivateSwitchBase-input"
            type="radio"
            value="VALUE+2"
          />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      >
        LABEL+2
      </span>
    </label>
  </div>
</div>
`;

exports[`disabled radio button renders disabled version 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-disabled MuiPrivateSwitchBase-root MuiRadio-root Radio-root MuiPrivateSwitchBase-disabled MuiRadio-disabled Radio-disabled"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Radio-uncheckedIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        disabled=""
        type="radio"
        value=""
      />
    </span>
  </span>
</div>
`;

exports[`radio button renders default radio button 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiRadio-root Radio-root"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Radio-uncheckedIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        type="radio"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;
